--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@ body {
   font-family: sans-serif;
 }
 
+#day {
+  background: white;
+  color: black;
+}
+
+#night {
+  background: black;
+  color: white;
+}
+
 #message {
   font-size: 100px;
 }
